--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,12 @@ package-mode=false
 
 [tool.poetry.dependencies]
 python="^3.13"
+fastapi = "^0.115.11"
+uvicorn = {extras = ["standart"], version = "^0.34.0"}
+pydantic-settings = "^2.8.1"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
+asyncpg = "^0.30.0"
+alembic = "^1.15.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
