--- a/docker-composes/db.yaml
+++ b/docker-composes/db.yaml
@@ -1,10 +1,12 @@
 services:
 
   pg:
+    container_name: my_postgres
     image: postgres
     env_file:
       - .env
     ports:
       - "5432:5432"
     volumes:
-      - /var/lib/postgresql/data
+      - .postgres:/var/lib/postgresql/data
+    restart: always
